# saasus-sdk-rust

./: .gitignore  Cargo.toml  README.md  generate.sh
src/: lib.rs
src/client/: apilog.rs  auth.rs  awsmarketplace.rs  billing.rs  communication.rs  integration.rs  mod.rs  pricing.rs
