[package]
name = "saasus-sdk-rust"
version = "1.11.1"
authors = ["Ryudai Anada (@bigdragon0610)"]
description = "SaaSus SDK for Rust"
edition = "2018"

[workspace.package]
version = "1.11.1"
authors = ["Ryudai Anada (@bigdragon0610)"]

[dependencies]
apilog = { path = "generated/apilog" }
auth = { path = "generated/auth" }
awsmarketplace = { path = "generated/awsmarketplace" }
billing = { path = "generated/billing" }
communication = { path = "generated/communication" }
integration = { path = "generated/integration" }
pricing = { path = "generated/pricing" }
hyper = { version = "~0.14", features = ["full"] }
hyper-tls = "~0.5"
